--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ li {
     text-align: center;
 }
 
-a {
+a { 
     text-decoration: none;
     color: white;
 }
@@ -229,13 +229,18 @@ aside {
     width: 30%;
     display: flex;
     justify-content: center;
-    padding: 0px 16px;
+    padding: 16px 0px;
 }
 
 .signup-btn-cto {
-    padding: 4px 32px;
     background-color: #3882f6;
     border-radius: 5px; 
-    border: white 2px solid;
+    border: #f9faf8 2px solid;
+    color: #f9faf8;
+    padding: 8px 16px;
+}
+
+.signup-btn-cto > a {
     color: white;
+    padding: 16px 32px;
 }
