--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,14 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    background-image: url(../img/76.jpg);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .wrapper {
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -23,240 +27,167 @@ body {
 
 .container-1 {
     width: 100%;
-    margin: 0;
-}
-
-.container-1 > * {
+    margin: 0;    
     display: flex;
     flex-flow: column;
     align-items: center;
-    gap: 64px;
-    background-color: #1F2937;
+    justify-content: center;
+    height: 100vh;
 }
 
 .content-1 {
     display: flex;
-    padding-bottom: 96px;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
-.header, .header-content-1 {
-    display: flex;
-    justify-content: space-between;
-    width: 75%;
-    margin: 0;
-}
+/* -------header------- */
 
 .header {
-    color: white;
-    align-items: center;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0px 32px;
+    flex-basis: 60%;
+    flex: 1 1 auto;
+    position: fixed;
+    top: 0;
+    background-color: rgb(0, 0, 0);
+}
+
+.logo-container {
+    padding: 0 16px;
+    flex-basis: 20%;
+    display: flex;
+    justify-content: center;
+    color: rgb(216, 177, 5);
 }
 
 .header-links {
-    width: 40%;
+    flex-basis: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-ul {
+.header-links > * {
     display: flex;
     justify-content: space-between;
-    padding: 0;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.h-links > * {
     list-style: none;
+    display: flex;
+    flex-basis: 33%;
+    justify-content: center;
+    align-items: center;
 }
 
-li {
-    text-align: center;
-}
-
-a { 
+.link {
     text-decoration: none;
-    color: white;
+    padding: 4px 32px;
+    color: rgb(216, 177, 5);
+    font-weight: bolder;
+    font-size: 1.2rem;
+    text-align: center;
+    text-align-last: center;
 }
+
+/* -------container-1 content------- */
 
 .second-content {
+    border-radius: 25px;
+    background-color: rgb(216, 177, 5);
     width: 75%;
+    padding: 28px;
 }
 
 .header-content-1 {
-    height: 250px;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
 }
 
 .content-left {
     display: flex;
-    flex-flow: column;
-    color: white;
-    justify-content: space-evenly;
-}
-
-.header-content-1 > * {
-    width: 50%;
-    padding: 0;
-    margin: 0;
-    gap: 8px;
-}
-
-.content-left-title > h2 {
-    font-size: 48px;
-    color: #f9faf8;
-    font-weight: bolder;
-    margin: 0 64px 0 0;
-}
-
-.content-left-description > * {
-    font-size: 18px;
-    color: #e5e7eb;
-    margin: 0;
-}
-
-.signup-btn {
-    background-color: #3882f6;
-    border: none;
-    border-radius: 10px;
-    font-size: 16px;
-    margin: 0;
-    padding: 4px 24px;
-}
-
-.content-right-img-holder {
-    background-color: gray;
-    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
     justify-content: center;
-    align-items: center;
+    flex-basis: 37.5%;
+    padding: 4px 32px;
+    padding: 8px 16px;
+    height: 250px;
 }
 
-.content-img-box > p {
-    color: white;
+.content-left > * {
+    padding: 8px;
+    color: rgb(0, 0, 0);
 }
 
-/* -------container 2------- */
-
-.container-2 {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    width: 100%;
-    padding: 0 62px 72px 62px;
-}
-
-.content-title-2 {
-    font-size: 36px;
-    color: #1F2937;
-}
-
-.content-illustration {
-    display: flex;
-    justify-content: space-between;
-    width: 65%;
-}
-
-.boxes {
-    border: 3px #3882f6 solid;
-    height: 150px;
-    border-radius: 15px;
-    width: 150px;
-}
-
-.illu {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-}
-
-.illu > p {
-    margin: 8px;
-    width: 150px;
-    color: #525252;
-    text-align: justify;
+.content-left > * > * {
+    margin: 0;
+    padding: 0;
     text-align-last: center;
 }
 
-/* -------container 3------- */ 
+.content-left-title > * {
 
-.container-3 {
+    font-size: 3rem;
+}   
+
+.signup-btn {
+    background-color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 10px 100px / 120px;
+    padding: 8px 0px;
+    margin: 0;
+}
+
+.signup-btn > * {
+    text-decoration: none;
+    padding: 8px 32px;
+    color: rgb(216, 177, 5);
+}
+
+.content-right-img-holder {
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
-    background-color: #e5e7eb;
-    padding: 128px 64px;
-}
-
-.quote {
-    width: 75%;
-    display: flex;
-    flex-flow: column;
-    gap: 8px;
-}
-
-.quote > p {
-    font-size: 36px;
-    font-style: italic;
-    color: #1F2937;
-    margin: 0;
-}
-
-aside {
-    text-align: right;
-}
-
-/* -------container 4------- */
-
-.container-4 {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 96px 32px;
-}
-
-.content-signup {
-    width: 75%;
-    display: flex;
-    align-items: center;
-    border-radius: 10px;
-    padding: 32px 64px;
-    background-color: #3882f6;
-}
-
-.call-to-action {
-    width: 70%;
-}
-
-.call-to-action > p {
+    flex-basis: 37.5%;
     color: white;
-    font-size: large;
-    font-weight: 300;
+    padding: 0;
+    border-radius: 25px;
+    padding: 4px 32px;
+    background-color: rgba(0, 0, 0, 0.589);
 }
 
-.call-to-action > * {
-    margin: 0;
-    color: white;
+.content-img-box {
+    height: 250px;
+}
+
+.effects {
     width: 100%;
 }
 
-h4 {
-    font-size: 1.5rem;
-    font-weight: bolder;
-}
-
-.sign-up-button-cto {
-    width: 30%;
+.effects > * {
     display: flex;
+    padding: 0;
+}
+
+.effects > * > * {
+    list-style: none;
+    flex-basis: 33.3%;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    padding: 16px 0px;
-}
-
-.signup-btn-cto {
-    background-color: #3882f6;
-    border-radius: 5px; 
-    border: #f9faf8 3px solid;
-    color: #f9faf8;
-    padding: 8px 16px;
-    font-weight: bolder;
-}
-
-.signup-btn-cto > a {
+    font-size: 0.5rem;
     color: white;
-    padding: 16px 32px;
 }
