--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ body {
     padding: 4px 32px;
     color: rgb(216, 177, 5);
     font-weight: bolder;
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: center;
     text-align-last: center;
 }
@@ -105,6 +105,7 @@ body {
     background-color: rgb(216, 177, 5);
     width: 75%;
     padding: 28px;
+    border-radius: 20% 10% / 20% 40%;
 }
 
 .header-content-1 {
@@ -134,6 +135,7 @@ body {
 .content-left > * > * {
     margin: 0;
     padding: 0;
+    text-align: justify;
     text-align-last: center;
 }
 
@@ -167,6 +169,7 @@ body {
     border-radius: 25px;
     padding: 4px 32px;
     background-color: rgba(0, 0, 0, 0.589);
+    border-radius: 20% 5% / 10% 30%;
 }
 
 .content-img-box {
@@ -190,4 +193,58 @@ body {
     justify-content: center;
     font-size: 0.5rem;
     color: white;
+}
+
+/* -------container-2------- */
+
+.container-2 {
+    width: 100%;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    height: 70vh;
+    background-color: white;
+    gap: 15%;
+}
+
+.content-title-2 > * {
+    font-size: 3rem;
+    padding: 0;
+    margin: 0;
+}
+
+.content-illustration {
+    display: flex;
+    justify-content: space-between;
+    width: 85%;
+}
+
+.illu {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 21.5%;
+}
+
+.boxes {
+    height: 175px;
+    width: 200px;
+    border: solid rgb(0, 0, 0) 3px;
+    border-radius: 20% 10%;
+    background-color: rgb(255, 196, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.desc {
+    text-align: justify;
+    text-align-last: center;
+}
+
+.weapons {
+    height: auto;
+    width: 175px;
 }
