--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,9 @@ body {
     display: flex;
     justify-content: center;
     color: rgb(216, 177, 5);
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
 }
 
 .header-links {
@@ -96,7 +99,7 @@ body {
     padding: 4px 32px;
     color: rgb(216, 177, 5);
     font-weight: bolder;
-    font-size: 1rem;
+    font-size: 0.9rem;
     text-align: center;
     text-align-last: center;
 }
@@ -297,6 +300,10 @@ body {
     font-weight: bold;
 }
 
+.left-news > p > a {
+    color: black;
+}
+
 .description-news {
     font-size: 1.2rem;
 }
@@ -324,6 +331,7 @@ body {
     height: 200px;
     width: 350px;
     border-radius: 10% 20%;
+    box-shadow: 5px 4px rgba(0, 0, 0, 0.322);
 }
 
 /* -------container-4------- */
@@ -372,11 +380,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-flow: column nowrap;
 }
 
 .footer-contents {
     width: 100%;
-    padding: 0 56px;
+    padding: 0 16px;
     display: flex;
     flex-flow: column;
 }
@@ -386,11 +395,12 @@ body {
     justify-content: space-between;
     list-style: none;
     width: 100%;
+    padding: 0;
 }
 
 .footer-contents > ul > li {
     font-size: 0.8rem;
     padding: 0;
     text-align: center;
-    flex: 33.33%;
+    color: rgb(131, 131, 131);
 }
