--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
+/* 
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░█░░░░░██░░░░████████████░░░░░░░░░░░░░░
+░░█░░░░██░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░
+░░█░░███░░░░░██████░░░░░░░░░░░░░░░░░░░░░
+░░████░░░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░█████░░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░█░░░███░░░██░░░░░no ctrl C allowed░░░░
+░░█░░░░░██░░████████░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░███░░░░██░░░░░█████████░░░░░░░░░░░░
+░░░░░████░░░███░░░░░░░░█░░░░░░░░░░░░░░░░
+░░░░░██░██░██░█░░░░░░░░█░░░░░░░░░░░░░░░░
+░░░░░█░░░███░░░█░░░░░░░█░░░░░░░░░░░░░░░░
+░░░░░█░░░░██░░░██░░░░░░█░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░██████████░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░█░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░█░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░█░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░█░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░█░░░░░█░░░█░░░░░░░░░░░░░░░░░░░░░░░
+░░░█░░░░░░░░░░░██░░░░░░░░░░░░░░░░░░░░░░░
+░░░██░░░░░░░░███░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░█████████░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+
+*/
+
+
 html {
     box-sizing: border-box;
 }
@@ -70,6 +105,10 @@ body {
     justify-content: center;
     align-items: center;
     gap: 8px;
+}
+
+.logo-container > img {
+    flex: 1 1 auto;
 }
 
 .header-links {
