--- a/css/style.css
+++ b/css/style.css
@@ -439,7 +439,7 @@ body {
 
 .footer-contents > ul > li {
     font-size: 0.8rem;
-    padding: 0;
     text-align: center;
+    flex-basis: 25%;
     color: rgb(131, 131, 131);
 }
